# h4bot

./: Cargo.toml  README.md  Shuttle.toml  build.rs  justfile  run  run.sh  shell.nix
.github/: dependabot.yml
.github/workflows/: rust-clippy.yml  scorecards.yml  shuttle.yml
.trunk/: trunk.yaml
src/: commands.rs  main.rs
src/commands/: fun.rs  latency.rs  mod.rs  music.rs  queue.rs  utility.rs
