[package]
name = "h4bot"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "h4bot"
path = "src/main.rs"


[build-dependencies]

[dependencies]
anyhow = "1.0.75"
tokio = "1.32.0"
reqwest = "0.11.23"
tracing = "0.1.37"
futures = "0.3.28"
regex = "1.9.3"
url = "2.4.0"
rand = { version = "0.8.5" }
