[package]
name = "h4bot"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.75"
poise = { version = "0.6.1", features = ["cache"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
reqwest = { version = "0.11.23", features = ["json"] }
tracing = "0.1.37"
futures = "0.3.28"
regex = "1.9.3"
url = "2.4.0"
rand = { version = "0.8.5" }
serde = { version = "1.0.195", features = ["derive"] }
dotenvy = "0.15.7"
tracing-subscriber = "0.3.18"
